--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -3,8 +3,67 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
 		<title>Blooger</title>
 	</head>
-	<body></body>
+	<body>
+		<!-- --------------Navigation---------------------->
+		<header class="header">
+			<div class="logo">
+				<a href="#" class="logo-text">Blooger</a>
+			</div>
+			<div class="toggle-collapse">
+				<div class="toggle-collapse__icon">
+					<i class="fas fa-bars"></i>
+				</div>
+			</div>
+			<nav class="nav">
+				<ul class="nav__items">
+					<li class="nav__item"><a href="">Home</a></li>
+					<li class="nav__item"><a href="">Category</a></li>
+					<li class="nav__item"><a href="">Archive</a></li>
+					<li class="nav__item"><a href="">Pages</a></li>
+					<li class="nav__item"><a href="">Contact Us</a></li>
+				</ul>
+			</nav>
+			<div class="social">
+				<ul class="social__items">
+					<li class="social__item">
+						<a href=""><i class="fab fa-facebook-f"></i></a>
+					</li>
+					<li class="social__item">
+						<a href=""><i class="fab fa-instagram"></i></a>
+					</li>
+					<li class="social__item">
+						<a href=""><i class="fab fa-twitter"></i></a>
+					</li>
+					<li class="social__item">
+						<a href=""><i class="fab fa-youtube"></i></a>
+					</li>
+				</ul>
+			</div>
+		</header>
+
+		<!------------------ Main Site Section  ------------------>
+
+		<main>
+			<!------------ Site Title --------------------->
+			<section class="showcase">
+				<div class="showcase-content">
+					<h3>Tours & Travels</h3>
+					<h1>Amazing Place on Earth</h1>
+					<button class="btn">Explore</button>
+				</div>
+			</section>
+		</main>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src=".js/main.js"></script>
+	</body>
 </html>
