--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" />
 		<title>Blooger</title>
 	</head>
 	<body>
@@ -55,14 +56,24 @@
 		<main>
 			<!------------ Site Title --------------------->
 			<section class="showcase">
-				<div class="showcase-content">
+				<div class="showcase__content">
 					<h3>Tours & Travels</h3>
 					<h1>Amazing Place on Earth</h1>
 					<button class="btn">Explore</button>
 				</div>
 			</section>
+
+			<!---------------------Blog Carousel  ----------------->
+			<section class="blog">
+				<div class="blog__content">
+					<div class="blog__content-container">
+						<div class="owl-carousel owl-theme blog-post"></div>
+					</div>
+				</div>
+			</section>
 		</main>
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src=".js/main.js"></script>
 	</body>
