Completed discovery section style

--- a/Rosa/index.html
+++ b/Rosa/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Cabin|Herr+Von+Meullerhoff|Source+Sans+Pro:400,900&display=swap"
+			href="https://fonts.googleapis.com/css?family=Cabin|Herr+Von+Muellerhoff|Source+Sans+Pro:400,900&display=swap"
 		/>
 		<!--Scroll reveal CDN-->
 		<script src="https://unpkg.com/scrollreveal"></script>
@@ -65,16 +65,45 @@
 						<div class="line line-left"></div>
 						<div class="asterisk"><i class="fas fa-asterisk"></i></div>
 						<div class="line line-right"></div>
-						<div class="single-animation">
-							<h5>Ready to be opened</h5>
-							<a href="#" class="btn cta-btn"></a>
-						</div>
+					</div>
+					<div class="single-animation">
+						<h5>Ready to be opened</h5>
+						<a href="#" class="btn cta-btn">Explore</a>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<!-- Hero ends -->
+
+		<!-- Discover story SECTION -->
+
+		<section class="discover-our-story">
+			<div class="container">
+				<div class="restaraunt-info">
+					<div class="restaraunt-description padding-right animate-left">
+						<div class="global-headline">
+							<h2 class="sub-headline"><span class="first-letter">D</span>iscover</h2>
+							<h1 class="headline headline-dark">Our story</h1>
+							<div class="asterisk"><i class="fas fa-asterisk"></i></div>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta architecto voluptatum
+							dolorem, labore hic impedit quod at aperiam commodi sapiente harum eligendi nulla pariatur
+							minima molestias aspernatur. Odit, commodi voluptates?
+						</p>
+						<a href="" class="btn body-btn">About us</a>
+					</div>
+					<div class="restaraunt-info img animate-right">
+						<img src="img/our-story-1.jpg" alt="" />
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Discover our story ends -->
+
+		<!-- Tas te -->
 
 		<script src="js/main.js"></script>
 	</body>
