--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -65,16 +65,51 @@
 
 			<!---------------------Blog Carousel  ----------------->
 			<section class="blog">
-				<div class="blog__content">
-					<div class="blog__content-container">
-						<div class="owl-carousel owl-theme blog-post"></div>
+				<div class="container">
+					<div class="owl-carousel owl-theme blog-post">
+						<div class="blog-post__content">
+							<img src="/img/Blog-post/post-1.jpg" alt="" />
+							<div class="blog-post__title">
+								<h3>London Fashion week's continued the evolution</h3>
+								<button class="btn btn-blog">Fashion</button>
+								<span>2 minutes</span>
+							</div>
+						</div>
+						<div class="blog-post__content">
+							<img src="/img/Blog-post/post-3.jpg" alt="" />
+							<div class="blog-post__title">
+								<h3>London Fashion week's continued the evolution</h3>
+								<button class="btn btn-blog">Fashion</button>
+								<span>2 minutes</span>
+							</div>
+						</div>
+						<div class="blog-post__content">
+							<img src="/img/Blog-post/post-2.jpg" alt="" />
+							<div class="blog-post__title">
+								<h3>London Fashion week's continued the evolution</h3>
+								<button class="btn btn-blog">Fashion</button>
+								<span>2 minutes</span>
+							</div>
+						</div>
+						<div class="blog-post__content">
+							<img src="/img/Blog-post/post-4.png" alt="" />
+							<div class="blog-post__title">
+								<h3>London Fashion week's continued the evolution</h3>
+								<button class="btn btn-blog">Fashion</button>
+								<span>2 minutes</span>
+							</div>
+						</div>
+					</div>
+					<div class="owl-navigation">
+						<span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
+						<span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
 					</div>
 				</div>
 			</section>
 		</main>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src=".js/main.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+		<script src="/js/main.js"></script>
 	</body>
 </html>
