Complete style for discover our menu section

--- a/Rosa/index.html
+++ b/Rosa/index.html
@@ -119,6 +119,36 @@
 
 		<!-- Tasteful recipe ends -->
 
+		<!-- Discover our menu SECTION -->
+
+		<section class="discover-our-menu">
+			<div class="container">
+				<div class="restaurant-info">
+					<div class="image-group padding-right animate-left">
+						<img src="/img/menu-group-1.jpg" alt="" />
+						<img src="/img/menu-group-2.jpg" alt="" />
+						<img src="/img/menu-group-3.jpg" alt="" />
+						<img src="/img/menu-group-4.jpg" alt="" />
+					</div>
+					<div class="restaurant-description animate-right">
+						<div class="global-headline">
+							<h2 class="sub-headline"><span class="first-letter"></span>iscover</h2>
+							<h1 class="headline headline-dark">Menu</h1>
+							<div class="asterisk"><i class="fas fa-asterisk"></i></div>
+						</div>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam mollitia laboriosam quidem,
+							sequi, dignissimos totam veritatis beatae, voluptas magni odit eligendi quas quos amet
+							officiis excepturi corrupti iste tempora quae.
+						</p>
+						<a href="#" class="btn-body">View the full menu</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Discover our menu section ends -->
+
 		<script src="js/main.js"></script>
 	</body>
 </html>
